Loading sequence and delay
+ A custom form layout (if appliable) is now loaded within initialiseForm() before other presentation logic to control field visibility.
+ There is a slight delay in loading the prepared form; this is to prevent any noticeable flickers of the uncustomised form.

--- a/vf-sp-styles.css
+++ b/vf-sp-styles.css
@@ -8,6 +8,10 @@ Stylesheet Release: 181109
 
 
 /* [SharePoint styles, overridden as needed] */
+#onetIDListForm {
+  /* List form starts hidden */
+  display: none;
+}
 hr {
   color: #EEEEEE;
   background-color: #EEEEEE;
