--- a/vf-sp-styles.css
+++ b/vf-sp-styles.css
@@ -2,7 +2,7 @@
 Vanilla Fix for SharePoint: Stylesheet
 http://vanillafix.com
 
-Stylesheet Release: 181109
+Stylesheet Release: 181216
 */
 
 
@@ -65,6 +65,7 @@ hr {
   clear: both;
   margin: 0px 0px 4px 4px;
   display: none;
+  min-width: 800px;
 }
 .formDivRow {
   clear: both;
