Inspect object properties through the console
Key properties of the instantiated VanillaFix object are now showin in the console for easier debugging

--- a/vf-sp-styles.css
+++ b/vf-sp-styles.css
@@ -1,9 +1,9 @@
-/*
-Vanilla Fix for SharePoint: Stylesheet
-http://vanillafix.com
-
-Stylesheet Release: 181216
-*/
+/**
+ * Vanilla Fix for SharePoint: Stylesheet
+ * http://vanillafix.com
+ *
+ * Stylesheet Release: 181216
+ */
 
 
 
